infrastructure/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: instantdeploy-frontend
  namespace: instantdeploy
spec:
  type: NodePort
  selector:
    app: instantdeploy-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30000
