infrastructure/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: instantdeploy
  namespace: instantdeploy
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /instantdeploy-api
            pathType: Prefix
            backend:
              service:
                name: instantdeploy-frontend
                port:
                  number: 80
          - path: /instantdeploy-ws
            pathType: Prefix
            backend:
              service:
                name: instantdeploy-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: instantdeploy-backend
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: instantdeploy-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: instantdeploy-frontend
                port:
                  number: 80
